Tests/Modules/Error/InHandler/.build/outerhandler.pr
{
  "name": "OuterHandler",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %outerHandled% = true",
      "lineNumber": 3,
      "indent": 0,
      "comment": "catches the propagated error from BadHandler",
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%outerHandled%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/InHandler/OuterHandler.goal",
  "prPath": "/Modules/Error/InHandler/.build/outerhandler.pr",
  "hash": "6408d926d051e2348b13ffda7f9b733c1ed41db27e8ca3a7ffde98c7172e8c36",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}